--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,15 +1,14 @@
 <% include ./partials/header %>
-<nav class="nav">
+<nav class="nav" style="z-index: 990">
     <div class="container">
         <div class="logo">
-            <a href="#">Your Logo</a>
+            <a href="#">TRIPZY</a>
         </div>
         <div id="mainListDiv" class="main_list">
             <ul class="navlinks">
                 <li><a href="#">About</a></li>
-                <li><a href="#">Portfolio</a></li>
                 <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="/login">Log In</a></li>
             </ul>
         </div>
         <span class="navTrigger">
@@ -20,7 +19,32 @@
     </div>
 </nav>
 
+
+
 <section class="home">
+    <div style="padding-top: 10em;">
+        <form class="sign-up" action="/register" method="POST" style="z-index: auto">
+            <h1 class="sign-up-title">Don't have an account?</h1>
+            <h1 class="sign-up-title">Create a <span style="color: chartreuse">TRIPZY</span> account Now</h1>
+            <input type="text" class="sign-up-input" name="username" placeholder="What's your username?" autofocus>
+            <input type="password" class="sign-up-input" name="password" placeholder="Choose a password">
+            <input type="submit" value="Sign me up!" class="sign-up-button">
+            <br><br><br>
+            <h2 class="sign-up-title">Already Have an account?</h2>
+            <a href="/login">
+                <span class="ui animated button primary" tabindex="0" style="margin-left:11.8em">
+
+                    <span class="visible content">Login</span>
+                    <div class="hidden content">
+                        <i class="right arrow icon"></i>
+                    </div>
+                </span>
+            </a>
+
+
+
+        </form>
+    </div>
 </section>
 <div style="height: 1000px">
     <!-- just to make scrolling effect possible -->
