--- a/views/preference-form.ejs
+++ b/views/preference-form.ejs
@@ -11,7 +11,7 @@
             <div class="main-form">
                 <form>
                     <div class="form-group row">
-                            <label for="Name" class="col-sm-4 col-form-label">Name</label>
+                            <label for="Name" class="colprefform-sm-4 col-form-label">Name</label>
                                <div class="col-sm-8">
                                   <input type="text" class="form-control" id="userName" required>
                                 </div>                  
