--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
             <ul class="navlinks">
                 <li><a href="#">About</a></li>
                 <li><a href="#">Services</a></li>
-                <li><a href="/login">Log In</a></li>
+                <li><a href="/auth/login">Log In</a></li>
             </ul>
         </div>
         <span class="navTrigger">
@@ -22,7 +22,7 @@
 
 
 <section class="home">
-    <div style="padding-top: 2em;">
+    <div style="padding-top: 2.5em;">
         <form class="sign-up" action="/register" method="POST" style="z-index: auto">
             <h1 class="sign-up-title">Don't have an account?</h1>
             <h1 class="sign-up-title">Create a <span style="color: chartreuse">TRIPZY</span> account Now</h1>
@@ -46,7 +46,7 @@
         </form>
     </div>
 </section>
-<div style="height: 1000px">
+<div style="height: 100px">
     <!-- just to make scrolling effect possible -->
     <h2 class="myH2">What is this ?</h2>
     <p class="myP">This is a responsive fixed navbar animated on scroll</p>
