--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -507,8 +507,9 @@ body {
 
 .sign-up {
   position: relative;
-  margin: 50px auto;
-  width: 485px;
+  margin: 4rem auto;
+  width: 40%;
+  height: 80%;
   padding: 19px 30px 16px;
   background: white;
   border-bottom: 1px solid #c4c4c4;
