--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
 
 <section class="home">
     <div style="padding-top: 2.5em;">
-        <form class="sign-up" action="/register" method="POST" style="z-index: auto">
+        <form class="sign-up" action="/auth/register" method="POST" style="z-index: auto">
             <h1 class="sign-up-title">Don't have an account?</h1>
             <h1 class="sign-up-title">Create a <span style="color: chartreuse">TRIPZY</span> account Now</h1>
             <input type="text" class="sign-up-input" name="username" placeholder="What's your username?" autofocus>
@@ -31,7 +31,7 @@
             <input type="submit" value="Sign me up!" class="sign-up-button">
             <br><br><br>
             <h2 class="sign-up-title">Already Have an account?</h2>
-            <a href="/login">
+            <a href="/auth/login">
                 <span class="ui animated button primary" tabindex="0" style="margin-left:11.8em">
 
                     <span class="visible content">Login</span>
@@ -48,12 +48,7 @@
 </section>
 <div style="height: 100px">
     <!-- just to make scrolling effect possible -->
-    <h2 class="myH2">What is this ?</h2>
-    <p class="myP">This is a responsive fixed navbar animated on scroll</p>
-    <p class="myP">I took inspiration from ABDO STEIF (<a href="https://codepen.io/abdosteif/pen/bRoyMb?editors=1100">https://codepen.io/abdosteif/pen/bRoyMb?editors=1100</a>)
-        and Dicson <a href="https://codepen.io/dicson/pen/waKPgQ">(https://codepen.io/dicson/pen/waKPgQ)</a></p>
-    <p class="myP">I HOPE YOU FIND THIS USEFULL</p>
-    <p class="myP">Albi</p>
+    <br />
     <p class="myP">
 
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum ratione facere animi impedit rem labore sint
